iac/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: iac-backend
  name: iac-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iac-backend
  template:
    metadata:
      labels:
        app: iac-backend
    spec:
      containers:
      - image: iac-backend
        name: iac-backend
---

apiVersion: v1
kind: Service
metadata:
  name: iac-backend-svc
spec:
  selector:
    app: iac-backend
  ports:
    - port: 8000
      targetPort: 8000
