iac/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: iac-database
  name: iac-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iac-database
  template:
    metadata:
      labels:
        app: iac-database
    spec:
      containers:
        - image: postgres:13.2-alpine
          name: iac-database
---

apiVersion: v1
kind: Service
metadata:
  name: iac-database-svc
spec:
  selector:
    app: iac-database
  ports:
    - port: 5432
      targetPort: 5432
