iac/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
    # annotations:
    #   nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: 39.pr.k8s.lan
      http:
        paths:
          # Backend
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: iac-backend-svc
                port:
                  number: 8000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: iac-backend-svc
                port:
                  number: 8000
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: iac-backend-svc
                port:
                  number: 8000

          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iac-frontend-svc
                port:
                  number: 3000
